--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,9 +2,9 @@
   "site": {
     "title": "myTrivia",
     "base_url": "https://cpro95.github.io/mytrivia",
-    "base_path": "/",
+    "base_path": "/mytrivia",
     "trailing_slash": false,
-    "favicon": "/images/favicon.png",
+    "favicon": "/mytrivia/images/favicon.png",
     "logo": "",
     "logo_width": "200",
     "logo_height": "34",
@@ -18,7 +18,7 @@
 
   "metadata": {
     "meta_author": "myTrivia",
-    "meta_image": "/images/og-image.png",
+    "meta_image": "/mytrivia/images/og-image.png",
     "meta_description": "myTrivia"
   },
 
